unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/FFX_Scheduled_Billings__c.field-meta.xml
<CustomField>
    <fullName>FFX_Scheduled_Billings__c</fullName>
    <formula>if ( pse__Scheduled_Bill_Rate_is_Daily_Rate__c = 'true' , pse__Scheduled_Bill_Rate__c * pse__Estimated_Days__c,pse__Scheduled_Bill_Rate__c * pse__Estimated_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Billings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>