unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/psaws__End_Date_Is_Last_Sunday__c.field-meta.xml
<CustomField>
    <fullName>psaws__End_Date_Is_Last_Sunday__c</fullName>
    <formula>AND(
MOD( pse__End_Date__c - DATE( 1900, 1, 7 ), 7 ) = 0,
    AND
    (
         pse__End_Date__c &lt; TODAY(),
         pse__End_Date__c &gt;= TODAY() - 7
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Is Last Sunday</label>
    <type>Checkbox</type>
</CustomField>