unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/psaws__High_Hours_Percent_Variance__c.field-meta.xml
<CustomField>
    <fullName>psaws__High_Hours_Percent_Variance__c</fullName>
    <formula>pse__Percent_Variance__c &gt;= 0.5 || pse__Percent_Variance__c &lt;= -0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Hours Percent Variance</label>
    <type>Checkbox</type>
</CustomField>