unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/psaws__Project_Manager_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>psaws__Project_Manager_Is_Current_User__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__c  = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Is Current User</label>
    <type>Checkbox</type>
</CustomField>