unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Actual_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Billable_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The billable amount of timecard hours</description>
    <inlineHelpText>The billable amount of timecard hours</inlineHelpText>
    <label>Actual Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>