unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Actual_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Days__c</fullName>
    <inlineHelpText>Actual number of days worked in the time period</inlineHelpText>
    <label>Actual Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>