unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Actual_Days_Aggregated__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Days_Aggregated__c</fullName>
    <description>Actual number of days worked in the time period based on aggregated timecards by week.</description>
    <inlineHelpText>Actual number of days worked in the time period based on aggregated timecards by week.</inlineHelpText>
    <label>Actual Days (Aggregated)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>