unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Days__c</fullName>
    <inlineHelpText>The number of days scheduled for work during the time period</inlineHelpText>
    <label>Estimated Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>