unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Project_Currency_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Currency_Exchange_Rate__c</fullName>
    <description>Project (bill rate) exchange rate, relative to corporate currency, calculated on the end date of the schedule.</description>
    <inlineHelpText>Project (bill rate) exchange rate, relative to corporate currency, calculated on the end date of the schedule.</inlineHelpText>
    <label>Project Currency Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>