unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the project manager for the project. This allows for easier workflow alerts to be sent</description>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Est Vs Actuals (Project Manager)</relationshipLabel>
    <relationshipName>Est_Vs_Actuals_Project_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>