unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the resource record for the assignment. This allows for easier workflow alerts to be sent</description>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Est Vs Actuals</relationshipLabel>
    <relationshipName>Est_Vs_Actuals_Resource</relationshipName>
    <type>Lookup</type>
</CustomField>