unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Resource_Request_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Bill_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The bill rate amount for the requested resource.</description>
    <inlineHelpText>The bill rate amount for the requested resource.</inlineHelpText>
    <label>Resource Request Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>