unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Resource_Request_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Days__c</fullName>
    <description>The number of requested days scheduled for the work on the held resource request during the time period.</description>
    <inlineHelpText>The number of requested days scheduled for the work on the held resource request during the time period.</inlineHelpText>
    <label>Resource Request Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>