unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Scheduled_Bill_Rate_is_Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Bill_Rate_is_Daily_Rate__c</fullName>
    <formula>IF(pse__Assignment__r.pse__Daily_Bill_Rate__c, 'true', 'false')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Bill Rate is Daily Rate</label>
    <type>Text</type>
</CustomField>