unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated time period</description>
    <inlineHelpText>The associated time period</inlineHelpText>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Est Vs Actuals</relationshipLabel>
    <relationshipName>Est_Vs_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>