unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Timecards_Submitted__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecards_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is any associated timecard submitted?</inlineHelpText>
    <label>Timecards Submitted</label>
    <type>Checkbox</type>
</CustomField>