unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Variance__c.field-meta.xml
<CustomField>
    <fullName>pse__Variance__c</fullName>
    <formula>pse__Actual_Hours__c - pse__Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of variance in hours</inlineHelpText>
    <label>Hours Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>