unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/validationRules/pse__Assignment_required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Assignment_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(pse__Assignment__c), ISBLANK(pse__Resource_Request__c))</errorConditionFormula>
    <errorMessage>The estimates versus actuals comparison record requires either an assignment or a resource request.</errorMessage>
</ValidationRule>