unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/listViews/psaws__Est_Vs_Actuals_With_High_Variance.listView-meta.xml
<ListView>
    <fullName>psaws__Est_Vs_Actuals_With_High_Variance</fullName>
    <columns>NAME</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Estimated_Hours__c</columns>
    <columns>pse__Actual_Hours__c</columns>
    <columns>pse__Percent_Variance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Project_Manager_Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Time_Period_Type__c</field>
        <operation>equals</operation>
        <value>Week</value>
    </filters>
    <filters>
        <field>psaws__High_Hours_Percent_Variance__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>psaws__End_Date_Is_Last_Sunday__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Estimates vs Actuals with High Variance</label>
</ListView>