unpackaged/main/default/objects/pse__Est_Vs_Actuals__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Estimated_Hours__c</columns>
    <columns>pse__Actual_Hours__c</columns>
    <columns>pse__Variance__c</columns>
    <columns>pse__Percent_Variance__c</columns>
    <columns>pse__Timecards_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project__c</field>
        <operation>equals</operation>
        <value>GC - STEPRATE PROJECT - GBP</value>
    </filters>
    <filters>
        <field>pse__Time_Period_Type__c</field>
        <operation>equals</operation>
        <value>Month</value>
    </filters>
    <label>All</label>
</ListView>